--- a/javascript.html
+++ b/javascript.html
@@ -13,7 +13,7 @@
 
         console.log("hello class");
 
-       // alert("SCAM ALERT!!!");
+       // alert("HELLOOOO");
 
     </script>
     <script src="./js/script.js" ></script>
